[package]
name = "stg"
version = "0.1.0"
authors = ["yonatan afewerk <yonatanafewerk@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "A desktop app that generator study time."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "STG"
identifier = "io.github.yehonatal.stg"